# catalog

./: .gitignore  README.md  blog_server.py  pyproject.toml
static/css/: style.css
templates/: 404.html  about.html  contacts.html  index.html
