[project]
name = "catalog"
version = "0.1.0"
description = "Simple blog web application"
authors = [
    {name = "Alexander Schischkin", email = "schischkin2@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.5.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
coverage = ">=7.14.1,<8.0.0"